manifests/overlays/staging/class-management-lecturer-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lecturer-deployment
  labels:
    app: class-management-lecturer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: class-management-lecturer-service
  template:
    metadata:
      labels:
        app: class-management-lecturer-service
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: class-management-lecturer-service-container
          image: harbor.th1enlm02.live/staging/class-management-lecturer-service:d0eea39-1734175783 # {"$imagepolicy": "staging:lecturer-service-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
