manifests/overlays/staging/class-management-lecturer-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lecturer-service-ingress
spec:
  rules:
  - host: stag-lecturer-api.th1enlm02.live
